[package]
name = "colored_markup"
version = "0.1.2"
edition = "2021"
description = "A library for parsing and rendering colored markup with CSS style rules."
license = "MIT"
authors = ["Jonathan Wight <schwa@schwa.io>"]
homepage = "https://github.com/schwa/colored_markup"
repository = "https://github.com/schwa/colored_markup."
keywords = ["markup", "css", "color", "terminal", "ansi"]
readme = "README.md"
categories = ["text-processing", "parsing", "terminal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
colored = "2.0.4"
lazy_static = "1.4.0"
nom = "7.1.3"
regex = "1.9.3"
